[package]
name = "nebula-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "High-performance memory management for Nebula workflow automation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
categories = ["memory-management", "data-structures", "caching"]

[features]
# Default: Core functionality without stats/monitoring
default = ["std", "pool", "arena", "cache", "budget", "logging"]

# Core runtime
std = ["once_cell", "libc", "chrono"]

# Major feature groups (простые, понятные)
pool = ["std", "crossbeam-queue"]
arena = ["std"]
cache = ["std", "hashbrown", "rand", "dashmap"]
stats = ["std"]
budget = ["std"]
logging = ["std", "nebula-log"]

# Platform optimization
numa-aware = ["libc"]
linux-optimizations = ["libc"]
simd = []  # Enable SIMD optimizations for memory operations

# Development/debugging (объединены)
monitoring = ["std", "stats"]
profiling = ["std", "stats"]
adaptive = ["stats"]

async = ["std", "tokio", "tokio-util", "futures-core", "futures", "async-trait", "tracing"]
nightly = []
backtrace-feature = ["std", "backtrace"]

# Convenience sets (для удобства пользователей)
full = ["std", "pool", "arena", "cache", "stats", "budget", "monitoring", "logging"]

[dependencies]
# Collections
crossbeam-queue = { version = "0.3", optional = true, default-features = false }
hashbrown = { version = "0.16.1", optional = true, default-features = false }
dashmap = { workspace = true, optional = true }

# Core dependencies
cfg-if = "1.0"
dyn-clone = "1.0"
spin = { workspace = true }
chrono = { workspace = true, optional = true, features = ["clock"] }

# No-std collections
heapless = { workspace = true }

# Platform-specific
libc = { workspace = true, optional = true }

# Synchronization
once_cell = { workspace = true, optional = true }
parking_lot = { workspace = true }

# Async runtime (optional)
tokio = { version = "1.0", optional = true, default-features = false, features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", optional = true, default-features = false }
futures-core = { version = "0.3", optional = true, default-features = false }
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }
async-trait = { version = "0.1", optional = true }
tracing = { workspace = true, optional = true }

# Debug tools (optional)
backtrace = { version = "0.3", optional = true }
rand = { workspace = true, optional = true }

# Errors
thiserror = { workspace = true }

# Internal crates
nebula-core = { path = "../core" }
nebula-log = { path = "../log", optional = true }
nebula-system = { path = "../system" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "libloaderapi"] }

# Linux NUMA support is available through libc

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc"
]
