[package]
name = "nebula-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "High-performance memory management for Nebula workflow automation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
categories = ["memory-management", "data-structures", "caching"]

[features]
# Default: Core functionality without stats/monitoring
default = ["std", "pool", "arena", "cache", "budget", "logging"]

# Core runtime
std = ["libc", "chrono"]

# Major feature groups (простые, понятные)
pool = ["std", "crossbeam-queue"]
arena = ["std"]
cache = ["std", "hashbrown", "rand", "dashmap"]
stats = ["std"]
budget = ["std"]
logging = ["std", "nebula-log"]
telemetry = ["nebula-telemetry", "nebula-metrics"]

# Platform optimization
numa-aware = ["libc"]
linux-optimizations = ["libc"]
simd = []  # Enable SIMD optimizations for memory operations

# Development/debugging (объединены)
monitoring = ["std", "stats"]
profiling = ["std", "stats"]
adaptive = ["stats"]

async = ["std", "tokio", "tokio-util", "futures-core", "futures", "tracing"]
nightly = []
backtrace-feature = ["std", "backtrace"]

# Convenience sets (для удобства пользователей)
full = ["std", "pool", "arena", "cache", "stats", "budget", "monitoring", "logging", "telemetry"]

[dependencies]
# Collections
crossbeam-queue = { version = "0.3", optional = true, default-features = false }
hashbrown = { version = "0.16.1", optional = true, default-features = false }
dashmap = { workspace = true, optional = true }

# Core dependencies
chrono = { workspace = true, optional = true, features = ["clock"] }

# Platform-specific
libc = { workspace = true, optional = true }

# Synchronization
parking_lot = { workspace = true }

# Async runtime (optional; explicit version for default-features = false)
tokio = { version = "1.49", optional = true, default-features = false, features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", optional = true, default-features = false }
futures-core = { version = "0.3", optional = true, default-features = false }
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }
tracing = { workspace = true, optional = true }

# Debug tools (optional)
backtrace = { version = "0.3", optional = true }
rand = { workspace = true, optional = true }

# Pin projection
pin-project = "1.1"

# Errors
thiserror = { workspace = true }
nebula-error = { workspace = true, features = ["derive"] }
nebula-log = { path = "../log", optional = true }
nebula-metrics = { path = "../metrics", optional = true }
nebula-system = { path = "../system" }
nebula-telemetry = { path = "../telemetry", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "libloaderapi"] }

# Linux NUMA support is available through libc

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }


[[bench]]
name = "allocator_benchmarks"
harness = false

[[bench]]
name = "real_world_scenarios"
harness = false

[[bench]]
name = "metrics_extension_benchmarks"
harness = false

[[bench]]
name = "allocations_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc"
]
