[package]
name = "nebula-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Shared metadata types for named, schematized Nebula entities (actions, credentials, resources, triggers)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
nebula-core = { path = "../core" }
nebula-error = { workspace = true, features = ["derive"] }
nebula-schema = { path = "../schema" }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
